[tool.poetry]
name = "fast-llm-api"
version = "0.1.0"
description = ""
authors = ["Chan Woo Kim <chanwkim01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
openai = "^1.45.1"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn fast_llm_api.main:app --reload"
