[tool.poetry]
name = "fast-llm-api"
version = "0.1.0"
description = ""
authors = ["Chan Woo Kim <chanwkim01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
openai = "^1.45.1"
pydantic = "^2.9.2"
numpy = "<2.0"
aiohttp = "^3.10.5"
anthropic = "^0.34.2"
anyio = "^4.6.0"
pytest-asyncio = "^0.24.0"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.6"
pytest = "^8.3.3"
httpx = "^0.27.2"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn fast_llm_api.main:app --reload"
